# artifact_forge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
baselines/: registries_42b1a03.json  registries_post_extraction_0b9c0f7.json  registries_showcase_0c8db1c.json
catalog/examples/: README.md  adapter_plate_router_mount.yaml  angle_bracket_40x40.yaml  angle_bracket_60x40_gusset.yaml  bearing_turntable_base.yaml  bench_leveling_foot_m8.yaml  bench_station.yaml  biomorphic_branch_clamp_organic.yaml  biomorphic_exoskeleton_demo_plate.yaml  biomorphic_exoskeleton_demo_plate_implicit.yaml  branch_lamp_clamp_60.yaml  broom_clip_25mm.yaml  camera_knob_quarter20.yaml  card_case_blank_120.yaml  cell_holder_18650_2x2.yaml  cell_holder_21700_1x3.yaml  cell_holder_aa_1x4.yaml  chair_foot_press_25x2.yaml  clay_pattern_stamp.yaml  cord_spool_wall_140.yaml  coupler_5_8_stepper.yaml  coupler_6_6_long.yaml  cup_holder_post_20.yaml  (+99 more)
community/: PACK_AUTHORING.md  PACK_REVIEW_CHECKLIST.md  README.md
community/templates/python-pack/: README.md  pack.yaml  pyproject.toml
community/templates/python-pack/docs/: CLAIMS.md
community/templates/python-pack/examples/: README.md
community/templates/python-pack/src/af_pack_example_python/: __init__.py  declarations.py
community/templates/python-pack/src/af_pack_example_python/checks/: __init__.py  checks_example.py
community/templates/python-pack/src/af_pack_example_python/data/: features.yaml
community/templates/python-pack/src/af_pack_example_python/data/archetypes/: README.md
community/templates/python-pack/src/af_pack_example_python/recipe_ops/: README.md
community/templates/python-pack/tests/: test_checks_example.py  test_examples_validate.py
community/templates/yaml-pack/: README.md  pack.yaml  pyproject.toml
community/templates/yaml-pack/docs/: PACK.md
community/templates/yaml-pack/examples/: desk_comb_preset.yaml
community/templates/yaml-pack/examples/my_domain/: example_instance.yaml
community/templates/yaml-pack/src/af_pack_example_yaml/: __init__.py
community/templates/yaml-pack/src/af_pack_example_yaml/data/: features.yaml
community/templates/yaml-pack/src/af_pack_example_yaml/data/archetypes/: README.md
community/templates/yaml-pack/src/af_pack_example_yaml/data/archetypes/my_domain/: example_archetype_v1.yaml
community/templates/yaml-pack/tests/: conftest.py
docs/: ARCHITECTURE.md  BIOMORPHIC.md  BUILDERS.md  ECOSYSTEM.md  ROADMAP.md  VALIDATION.md  VERTICAL_FARM_PACK.md
packs/artifact-forge-vf/: README.md  pack.yaml  pyproject.toml
packs/artifact-forge-vf/data/: features.yaml
packs/artifact-forge-vf/data/archetypes/: aluminum_profile_ref_v1.yaml  coco_cassette_v1.yaml  collector_endcap_v1.yaml  drain_screen_v1.yaml  inlet_cap_v1.yaml  sprout_cassette_v1.yaml  substrate_retainer_frame_v1.yaml  water_rail_v1.yaml
packs/artifact-forge-vf/docs/: VERTICAL_FARM_PACK.md
packs/artifact-forge-vf/examples/vertical_farm/: root_chamber_rail_demo.yaml  two_cell_line_petg.yaml  vertical_farm_flush_smoke.yaml  vertical_farm_row_3x1.yaml  vertical_farm_row_3x1_root_chamber.yaml
packs/artifact-forge-vf/src/artifact_forge_vf/: __init__.py  carrier.py  declarations.py  frame_report.py  joints.py  manufacturing.py  topology.py  water_report.py
packs/artifact-forge-vf/src/artifact_forge_vf/checks/: __init__.py  adapters.py  cassette.py  channel.py  common.py  receiver.py  substrate_cassette.py
packs/artifact-forge-vf/src/artifact_forge_vf/ops/: __init__.py  adapters.py  cassette.py  dock.py  rail.py  retainer.py
packs/artifact-forge-vf/tests/: conftest.py  test_cassette_checks.py  test_cassette_mesh_integrity.py  test_compat_matrix_vf.py  test_fluid_adapter_checks.py  test_fluid_adapters.py  test_fluid_cascade.py  test_flush_carrier.py  test_flush_rail_smoke.py  test_flush_reports.py  test_flush_row.py  test_interface_swaps_vf.py  test_lap_flow_joint.py  test_recipe_water_ops.py  test_supportless_windows.py  test_vertical_farm_cell.py  test_vertical_farm_cell_build.py  test_vertical_farm_flush_build.py  test_vertical_farm_joints.py  test_vertical_farm_pack.py  test_water_manufacturing.py  test_water_rail_checks.py
packs/official/artifact-forge-showcase/: README.md  pack.yaml  pyproject.toml
packs/official/artifact-forge-showcase/docs/: CLAIMS.md  GALLERY.md  PACK.md
packs/official/artifact-forge-showcase/examples/education/: tolerance_ladder_005_060.yaml
packs/official/artifact-forge-showcase/examples/jigs/: drilling_jig_4hole.yaml
packs/official/artifact-forge-showcase/examples/repair/: garden_hose_adapter.yaml  square_shaft_knob.yaml  vacuum_hose_32_to_35.yaml  washing_machine_drain_adapter.yaml
packs/official/artifact-forge-showcase/examples/studio/: minifuse_underdesk_mount.yaml  patch_cable_comb.yaml  scarlett_underdesk_mount.yaml
packs/official/artifact-forge-showcase/src/artifact_forge_showcase/: __init__.py  declarations.py
packs/official/artifact-forge-showcase/src/artifact_forge_showcase/checks/: __init__.py  jig.py  ladder.py  spare.py
packs/official/artifact-forge-showcase/src/artifact_forge_showcase/data/: features.yaml
packs/official/artifact-forge-showcase/src/artifact_forge_showcase/data/archetypes/education/: tolerance_ladder_v1.yaml
packs/official/artifact-forge-showcase/src/artifact_forge_showcase/data/archetypes/jigs/: drilling_jig_v1.yaml
packs/official/artifact-forge-showcase/src/artifact_forge_showcase/data/archetypes/repair/: hose_adapter_v1.yaml  replacement_knob_v1.yaml
packs/official/artifact-forge-showcase/src/artifact_forge_showcase/data/archetypes/studio/: underdesk_audio_interface_mount_v1.yaml
packs/official/artifact-forge-showcase/src/artifact_forge_showcase/ops/: __init__.py  jig.py  ladder.py  spare.py
packs/official/artifact-forge-showcase/tests/: conftest.py  test_jig_checks.py  test_ladder_checks.py  test_showcase_examples_validate.py  test_spare_checks.py
scripts/: export_public_core.py
tests/: conftest.py
(+439 files in other folders)
