[project]
name = "artifact-forge-ng"
version = "0.1.0"
description = "Deterministic-first YAML Product Grammar engine for 3D-printable parts"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
    { name = "Gleb Bondarenko", email = "pinepico8@gmail.com" },
]
keywords = ["3d-printing", "cad", "parametric", "generative-design", "cadquery", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
cad = [
    "cadquery>=2.4,<3",
    "numpy>=1.26",
    # marching cubes for the implicit exoskeleton skin (Bio-4M, STL-first)
    "scikit-image>=0.22",
]
web = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
forge = "artifact_forge_ng.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/artifact_forge_ng"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cad: tests that require the cadquery kernel (deselect with '-m \"not cad\"')",
]
