[project]
name = "artifact-forge-ng"
version = "0.1.0"
description = "Deterministic-first YAML Product Grammar engine for 3D-printable parts"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
    { name = "Gleb Bondarenko", email = "pinepico8@gmail.com" },
]
keywords = ["3d-printing", "cad", "parametric", "generative-design", "cadquery", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    # SVG path-data -> polygons for svg_relief (pure python, IR-level)
    "svgelements>=1.9",
]

[project.optional-dependencies]
cad = [
    "cadquery>=2.4,<3",
    "numpy>=1.26",
    # marching cubes for the implicit exoskeleton skin (Bio-4M, STL-first)
    "scikit-image>=0.22",
]
web = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    # official free showcase pack — ships in the public repo
    "artifact-forge-showcase",
    # private dev monorepo: the VF pack rides in the dev venv so the full
    # (core + pack) suite runs; the public core never depends on it
    "artifact-forge-vf",
]

[tool.uv.workspace]
members = ["packs/artifact-forge-vf", "packs/official/artifact-forge-showcase"]

[tool.uv.sources]
artifact-forge-vf = { workspace = true }
artifact-forge-showcase = { workspace = true }

[project.scripts]
forge = "artifact_forge_ng.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/artifact_forge_ng"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "packs/artifact-forge-vf/tests",
    "packs/official/artifact-forge-showcase/tests",
]
markers = [
    "cad: tests that require the cadquery kernel (deselect with '-m \"not cad\"')",
]
