[project]
name = "artifact-forge-vf"
version = "0.1.0"
description = "Artifact Forge Vertical Farm Pack — water rails, cassettes, collectors, fluid adapters (free bundled pack)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Gleb Bondarenko", email = "pinepico8@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "artifact-forge-ng",
]

[project.entry-points."artifact_forge_ng.packs"]
vf = "artifact_forge_vf:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/artifact_forge_vf"]

[tool.uv.sources]
artifact-forge-ng = { workspace = true }
