[project]
name = "af-pack-example-python"
version = "0.1.0"
description = "Example L2 pack: YAML archetypes + self-registering form checks"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["artifact-forge-ng"]

[project.entry-points."artifact_forge_ng.packs"]
example_python = "af_pack_example_python:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/af_pack_example_python"]
