[project]
name = "af-pack-example-yaml"
version = "0.1.0"
description = "Example L0/L1 pack: presets and YAML archetypes, no Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["artifact-forge-ng"]

[project.entry-points."artifact_forge_ng.packs"]
example_yaml = "af_pack_example_yaml:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/af_pack_example_yaml"]
