[project]
name = "artifact-forge-showcase"
version = "0.1.0"
description = "Artifact Forge Showcase Pack — free starter archetypes across studio, repair, jigs and education domains"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Gleb Bondarenko", email = "pinepico8@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "artifact-forge-ng",
]

[project.entry-points."artifact_forge_ng.packs"]
showcase = "artifact_forge_showcase:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/artifact_forge_showcase"]

[tool.uv.sources]
artifact-forge-ng = { workspace = true }
